docs-archive/apache-airflow-providers-standard/1.3.0/_sources/_api/airflow/providers/standard/sensors/time_delta/index.rst.txt
airflow.providers.standard.sensors.time_delta
=============================================

.. py:module:: airflow.providers.standard.sensors.time_delta


Classes
-------

.. autoapisummary::

   airflow.providers.standard.sensors.time_delta.TimeDeltaSensor
   airflow.providers.standard.sensors.time_delta.TimeDeltaSensorAsync
   airflow.providers.standard.sensors.time_delta.WaitSensor


Module Contents
---------------

.. py:class:: TimeDeltaSensor(*, delta, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), end_from_trigger = False, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`


   Waits for a timedelta.

   The delta will be evaluated against data_interval_end if present for the dag run,
   otherwise run_after will be used.

   :param delta: time to wait before succeeding.
   :param deferrable: Run sensor in deferrable mode. If set to True, task will defer itself to avoid taking up a worker slot while it is waiting.

   .. seealso::
       For more information on how to use this sensor, take a look at the guide:
       :ref:`howto/operator:TimeDeltaSensor`



   .. py:attribute:: delta


   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: end_from_trigger
      :value: False



   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Depending on the deferrable flag, either execute the sensor in a blocking way or defer it.

      - Sync path → use BaseSensorOperator.execute() which loops over ``poke``.
      - Async path → defer to DateTimeTrigger and free the worker slot.



   .. py:method:: execute_complete(context, event = None)

      Handle the event when the trigger fires and return immediately.



.. py:class:: TimeDeltaSensorAsync(*, end_from_trigger = False, delta, **kwargs)

   Bases: :py:obj:`TimeDeltaSensor`


   Deprecated. Use TimeDeltaSensor with deferrable=True instead.

   :sphinx-autoapi-skip:


.. py:class:: WaitSensor(time_to_wait, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`


   A sensor that waits a specified period of time before completing.

   This differs from TimeDeltaSensor because the time to wait is measured from the start of the task, not
   the data_interval_end of the DAG run.

   :param time_to_wait: time length to wait after the task starts before succeeding.
   :param deferrable: Run sensor in deferrable mode


   .. py:attribute:: deferrable
      :value: True



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



